<resources>
    <string name="app_name">Movie</string>
    <string name="add_movie">Add Movie</string>
    <string name="watchlist">Watchlist</string>
    <string name="log_in">Log in</string>
    <string name="enter_username">Enter username</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_director">Enter director</string>
    <string name="back">back</string>
    <string name="admin">Admin</string>
    <string name="watch_list">Watch list</string>
    <string name="sign_out">sign out</string>
    <string name="add_new_user">Add new user</string>
    <string name="movie_title_here">Movie title here</string>
    <string name="join_watchlist">Join Watchlist!</string>
    <string name="add_user">Add user</string>
    <string name="admin_box">Admin Box</string>
    <string name="join_movie_watchlist">Join movie watchlist!</string>
    <string name="enter_movie_title">Enter movie title</string>
    <string name="enter_genre">Enter genre</string>
    <string name="enter_release_date">Enter release date</string>
    <string name="back_to_sign_in_page">Back to Sign In Page</string>
    <string name="preference_file_key">daclinkPreferenceFileNameMovieList</string>
    <string name="preference_user_id_key">preference_user_id_key_movielist</string>
    <string name="username">Username</string>
    <string name="account">account</string>
    <string name="edit_password">Edit password</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out_2">Sign out</string>
    <string name="update_account_info_above">update account info above</string>
    <string name="edit_username">Edit username</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="edit_user">Edit user</string>
    <string name="change_account_information_here">Change account information here</string>
    <string name="watchlist_account">Watchlist account</string>
</resources>